--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                <figcaption>Picture of a player</figcaption>
                <img src="./assets/hockey3.jpg" alt="Player" width="100px">
             </figure>
-            <footer>Please email us at mdhl@chihockey.org
+            <footer>Please email us at <a href="mailto:mdhl@chihockey.org? subject= subject text" >mdhl@chihockey.org</a>
                 We reply to your email as soon as we can.</footer>
         </main>
     
