--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="./assets/Logo_Mighty_ducks-01.png" alt="Logo del Club" width="100 px">
+        <img src="./assets/Logo_Mighty_ducks-01.png" alt="Logo del Club" width="100">
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="./index.html">Home</a>
@@ -19,7 +19,7 @@
         <main>
             <figure>
                <figcaption>Picture of a player</figcaption>
-               <img src="./assets/hockey3.jpg" alt="Player" width="100px">
+               <img src="./assets/hockey3.jpg" alt="Player" width="100">
             </figure>
             <footer>Please email us at <a href="mailto:mdhl@chihockey.org? subject= subject text" >mdhl@chihockey.org</a>
                 We reply to your email as soon as we can.</footer>
