--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="./assets/Logo_Mighty_ducks-01.png" alt="Logo del Club" width="100 px">
+        <img src="./assets/Logo_Mighty_ducks-01.png" alt="Logo del Club" width="100">
         <h1>Mighty Ducks Hockey League</h1>
         <nav> 
             <a href="./index.html">Home</a>
@@ -20,7 +20,7 @@
         <section>
             <figure>
                 <figcaption>Picture of a player</figcaption>
-                <img src="./assets/hockey1.jpg" alt="player" width="200px">
+                <img src="./assets/hockey1.jpg" alt="player" width="200">
             </figure>
             <h2>Upcomming Events</h2>
             <article>
