haciendo ultmas correrciones a la task 1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="./assets/Logo_Mighty_ducks-01.png" alt="Logo del Club" width="100 px">
         <h1>Mighty Ducks Hockey League</h1>
         <nav> 
-            <a href="./index.html">Home</a>
+            <a href="#">Home</a>
             <a href="./AboutMDHL.html">About MDHL</a>
             <a href="./contact.html">Contact</a>
         </nav>
@@ -19,7 +19,6 @@
     <main>
         <section>
             <figure>
-                <figcaption>Picture of a player</figcaption>
                 <img src="./assets/hockey1.jpg" alt="player" width="200px">
             </figure>
             <h2>Upcomming Events</h2>
