--- a/AboutMDHL.html
+++ b/AboutMDHL.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
     <header>
@@ -12,14 +12,14 @@
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
             <a href="./index.html">Home</a>
-            <a href="./AboutMDHL.html">About MDHL</a>
+            <a href="#">About MDHL</a>
             <a href="./contact.html">Contact</a>
         </nav>     
 
     </header>
     <main>
         <figure>
-            <figcaption>Hockey player</figcaption>
+            
             <img src="./assets/hockey2.jpg" alt="player" width="100px">
         </figure>
         <article>
