empezando con la task 2

--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
+    <link rel="shortcut icon" href="./assets/img/logo.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./assets/styles/style1.css">
 </head>
 <body>
     <header>
+       <figure></figure>
         <img src="./assets/Logo_Mighty_ducks-01.png" alt="Logo del Club" width="100">
         <h1>Mighty Ducks Hockey League</h1>
+        <h2>Home</h2>
         <nav> 
             <a href="#">Home</a>
             <a href="./AboutMDHL.html">About MDHL</a>
@@ -19,10 +23,9 @@
     <main>
         <section>
             <figure>
-                <figcaption>Picture of a player</figcaption>
                 <img src="./assets/hockey1.jpg" alt="player" width="200px">
             </figure>
-            <h2>Upcomming Events</h2>
+            <h3>Upcomming Events</h3>
             <article>
                 <h3>August 4</h3>
                 <p>MDSL Funrdaiser</p>
