--- a/AboutMDHL.html
+++ b/AboutMDHL.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
+    <link rel="stylesheet" href="./assets/styles/style1.css">
+    <link rel="shortcut icon" href="./assets/img/logo.ico" type="image/x-icon">
 </head>
 <body>
     <header>
+        <figure></figure>
         <img src="./assets/Logo_Mighty_ducks-01.png" alt="Logo del Club" width="100">
         <h1>Mighty Ducks Hockey League</h1>
+        <h2>About MDHL</h2>
         <nav>
             <a href="./index.html">Home</a>
             <a href="#">About MDHL</a>
@@ -19,7 +23,7 @@
     </header>
     <main>
         <figure>
-            <figcaption>Hockey player</figcaption>
+            
             <img src="./assets/hockey2.jpg" alt="player" width="100px">
         </figure>
         <article>
