terminado primer estilo

--- a/AboutMDHL.html
+++ b/AboutMDHL.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <figure></figure>
-        <img src="./assets/Logo_Mighty_ducks-01.png" alt="Logo del Club" width="100">
+        <img class="logo" src="./assets/Logo_Mighty_ducks-01.png" alt="Logo del Club">
         <h1>Mighty Ducks Hockey League</h1>
         <h2>About MDHL</h2>
         <nav>
@@ -24,8 +24,9 @@
     <main>
         <figure>
             
-            <img src="./assets/hockey2.jpg" alt="player" width="100px">
+            <img class="foto" src="./assets/hockey2.jpg" alt="player">
         </figure>
+        <section  id="texto">
         <article>
             <h3>Mission</h3>
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in 
@@ -45,6 +46,7 @@
                 neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of 
                 parents and previous league members</p>
         </article>
+    </section>
     </main>
 
     
