--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
-    <link rel="stylesheet" href="./assets/styles/style1.css">
+    <!--<link rel="stylesheet" href="./assets/styles/style1.css">-->
+    <link rel="stylesheet" href="./assets/styles/style2.css">
     <link rel="shortcut icon" href="./assets/img/logo.ico" type="image/x-icon">
 </head>
 <body>
     <header>
         <figure></figure>
-        <img class="logo" src="./assets/Logo_Mighty_ducks-01.png" alt="Logo del Club">
+        <img class="logo" src="./assets/img/Logo_Mighty_ducks-01.png" alt="Logo del Club">
         <h1>Mighty Ducks Hockey League</h1>
         <h2>Contact</h2>
         <nav>
@@ -21,8 +22,8 @@
         </nav>
     </header>
         <main>
-            <figure>               
-               <img class="foto" src="./assets/hockey3.jpg" alt="Player">
+            <figure id="foto">               
+               <img src="./assets/img/hockey3.jpg" alt="Player">
             </figure>
             <section id="texto">
         <p> Please email us at <a href="mailto:mdhl@chihockey.org? subject=subject text">mdhl@chihockey.org</a>
