--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mighty Ducks Hockey League</title>
     <!--<link rel="stylesheet" href="./assets/styles/style1.css">-->
-    <link rel="stylesheet" href="./assets/styles/style2.css">
+    <!--<link rel="stylesheet" href="./assets/styles/style2.css">-->
+    <link rel="stylesheet" href="./assets/styles/style3.css">
     <link rel="shortcut icon" href="./assets/img/logo.ico" type="image/x-icon">
 </head>
 <body>
