--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Mighty Ducks Hockey League</title>
     <link rel="shortcut icon" href="./assets/img/logo.ico" type="image/x-icon">
     <!--<link rel="stylesheet" href="./assets/styles/style1.css">-->
-    <link rel="stylesheet" href="./assets/styles/style2.css">
+    <!--<link rel="stylesheet" href="./assets/styles/style2.css">-->
+    <link rel="stylesheet" href="./assets/styles/style3.css">
 </head>
 
 <body>
