creadas listas y tablas

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,11 @@
         <h1>Mighty Ducks Hockey League</h1>
         <h2>Contact</h2>
         <nav>
-            <a href="./index.html">Home</a>
-            <a href="./AboutMDHL.html">About MDHL</a>
-            <a href="#">Contact</a>
+            <a id="home" href="./index.html">Home</a>
+            <a id="about" href="./AboutMDHL.html">About MDHL</a>
+            <a id="contact" href="#">Contact</a>
+            <a id="game" href="./game_info.html">Game Info</a>
+            <a id="rules" href="./rules.html">Rules</a>
         </nav>
     </header>
         <main>
