--- a/game_info.html
+++ b/game_info.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="shortcut icon" href="./assets/img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/styles/style3.css">
 </head>
+
 <body>
     <header>
         <figure></figure>
@@ -15,14 +17,84 @@
         <h1>Mighty Ducks Hockey League</h1>
         <h2>Game information</h2>
         <nav>
-            <a href="./index.html">Home</a>
-            <a href="./AboutMDHL.html">About MDHL</a>
-            <a href="./contact.html">Contact</a>
-            <a href="./rules.html">Rules</a>
-            <a href="#">Game Info</a>
-        </nav>     
+            <a id="home" href="./index.html">Home</a>
+            <a id="about" href="./AboutMDHL.html">About MDHL</a>
+            <a id="contact" href="./contact.html">Contact</a>
+            <a id="rules" href="./rules.html">Rules</a>
+            <a id="game" href="#">Game Info</a>
+        </nav>
 
     </header>
-    
+    <section id="texto_game">
+        <h3>Fall Schedule</h2>
+            <p id="parrafo_game">
+                * All games take place on saturday.
+            </p>
+            <table class="tabla">
+                <tr>
+                    <th>SEPTEMBER</th>
+                    <th>Teams</th>
+                    <th>Location</th>
+                    <th>Times</th>
+                </tr>
+                <tr>
+                    <td>9/01</td>
+                    <td>U1 and U4</td>
+                    <td>AJ Katzeinmaier</td>
+                    <td>9:30 am.</td>
+                </tr>
+                <tr>
+                    <td> </td>
+                    <td>U3 and U2</td>
+                    <td>Greenbay</td>
+                    <td>1:00 pm.</td>
+                </tr>
+                <tr>
+                    <td>9/08</td>
+                    <td>U5 and U6</td>
+                    <td>Howard A Yeager</td>
+                    <td>9:30 pm.</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>U6 and U1</td>
+                    <td>Marjorie P Hart</td>
+                    <td>1:00 pm.</td>
+                </tr>
+                <tr>
+                    <td>9/15</td>
+                    <td>U2 and U4</td>
+                    <td>North</td>
+                    <td>9:30 pm.</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>U3 and U5</td>
+                    <td>AJ Katzeinmaier</td>
+                    <td>1:00 pm.</td>
+                </tr>
+                <tr>
+                    <td>9/22</td>
+                    <td>U1 and U3</td>
+                    <td>South</td>
+                    <td>9:30 am.</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>U2 and U6</td>
+                    <td>Howard A Yeager</td>
+                    <td>1:00 pm.</td>
+                </tr>
+                <tr>
+                    <td>9/29</td>
+                    <td>U4 and U5</td>
+                    <td>Greenbay</td>
+                    <td>9:30 pm.</td>
+                </tr>
+            </table>
+            
+
+    </section>
 </body>
+
 </html>
