--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
         <h1>Mighty Ducks Hockey League</h1>
         <h2>Uncomming Events</h2>
         <nav>
-            <a href="#">Home</a>
-            <a href="./AboutMDHL.html">About MDHL</a>
-            <a href="./contact.html">Contact</a>
+            <a id="home" href="#">Home</a>
+            <a id="about" href="./AboutMDHL.html">About MDHL</a>
+            <a id="contact" href="./contact.html">Contact</a>
+            <a id="game" href="./game_info.html">Game Info</a>
+            <a id="rules" href="./rules.html">Rules</a>
         </nav>
     </header>
     <main>
