--- a/rules.html
+++ b/rules.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="shortcut icon" href="./assets/img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/styles/style3.css">
 </head>
+
 <body>
     <header>
         <figure></figure>
@@ -15,14 +17,81 @@
         <h1>Mighty Ducks Hockey League</h1>
         <h2>Rules of Play & Policy</h2>
         <nav>
-            <a href="./index.html">Home</a>
-            <a href="./AboutMDHL.html">About MDHL</a>
-            <a href="./contact.html">Contact</a>
-            <a href="#">Rules</a>
-            <a href="./game_info.html">Game info</a>
-        </nav>     
-
+            <a id="home" href="./index.html">Home</a>
+            <a id="about" href="./AboutMDHL.html">About MDHL</a>
+            <a id="contact" href="./contact.html">Contact</a>
+            <a id="rules" href="#">Rules</a>
+            <a id="game" href="./game_info.html">Game info</a>
+        </nav>
     </header>
-    
+    <section id="texto_rules">
+        <h3 id="titulo">Mighty Ducks Hockey League</h3>
+        <h3 id="titulo">RULES OF PLAY & POLICIES</h3>
+        <h3 id="titulo">SPORTSMANSHIP</h3>
+        <p>The common interest that members of the Association share is to inspire
+            youth to practice the ideals of sportsmanship and fair play. Any player, coach,
+            team, parent, spectator, administrator or referee whose behavior detracts from
+            this purpose is subject to disciplinary action regardless of technical hockey
+            background, expertise, accomplishments or standing.</p>
+        <h3 id="titulo">IHF FIELD REGULATIONS</h3>
+        <ol>
+            <li>
+                <h4>DIMENSIONS.</h4>
+                <p>IHF Law 1 provides for flexible external field dimensions within
+                    a given maximum and minimum width and length. These dimensions should be
+                    adhered to for all fields used by teams under 12 and older</p>
+            </li>
+            <li>
+                <h4>COMPETITION FIELDS.</h4>
+                <p>Fields used within the competition program must be
+                    a minimum of 100 x 60 yards.Leagues, districts or associations participating in
+                    the state competition program that are unable to provide a field that meets these
+                    minimum requirements must advise the State Competition Board which will
+                    assign its Fields Committee to inspect the field and recommend to the Board
+                    whether or not a waiver of the minimum dimensions should be granted. Teams
+                    from leagues, districts or associations that are unable to provide an acceptable
+                    field may be required to play all their games away</p>
+            </li>
+            <li>
+                <h4>3. FIELDS USED BY YOUNG AGE GROUPS</h4>
+                <p>
+                <ol type="a">
+                    <li>
+                        U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
+                        for older age groups should be progressively larger
+                    </li>
+                    <li>
+                        U-8 plays on a field 40-50 yards in length and 20-30 yards width.
+                    </li>
+                    <li>
+                        U-10 play on a field 70-80 yards in length and 40-50 yards in width
+                    </li>
+                    <li>
+                        In addition, fields used by young age groups may have their internal
+                        dimensions and size of goal similarly modified.
+                    </li>
+                </ol>
+                </p>
+            </li>
+
+        </ol>
+        <h3 id="titulo">ALL-PLAY</h3>
+        <p>
+            All-play means that every recreation player on every team shall play atleast
+            fifty percent of each game. Coaches in the competition program are encouraged
+            to play their players 50% of each game.
+        </p>
+        <ul>
+            <li>
+                A Coach shall be permitted to not play a player 50% of each game
+                under special circumstances, e.g., unexcused absences from practice
+                and/or games, ungentlemanly conduct at practice and/or games, and
+                injuries.
+            </li>
+        </ul>
+
+    </section>
+
 </body>
+
 </html>
