--- a/game_info.html
+++ b/game_info.html
@@ -92,6 +92,28 @@
                     <td>9:30 pm.</td>
                 </tr>
             </table>
+            <article id="titulo_parrafo">
+                <h4>Facility Type</h4>
+                <p>: Outdoor</p>
+            </article>
+            <article id="titulo_parrafo">
+                <h4>Aditional Information</h4>
+                <p>: If deemed necessary by MDHL James may be shortened or canceled due to extreme weather conditions. </p>
+            </article>
+            <article id="titulo_parrafo">
+                <h4>Please direct all questions to</h4>
+                <p>: Michael Randall, League Coordinator</p>
+            </article>
+            <article id="titulo_parrafo2">
+                <div>
+                <h4>Phone:</h4>
+                <p><a href="tel:+6306908132">(630) 690-8132</a></p>
+                </div>
+                <div>
+                <h4>Email:</h4>
+                <p> <a href="mailto:michael.randall@chihockey.org? subject=subject text">michael.randall@chihockey.org</a></p>
+              </div>
+            </article>
             
 
     </section>
