terminando con listas y tablas

--- a/game_info.html
+++ b/game_info.html
@@ -26,10 +26,8 @@
 
     </header>
     <section id="texto_game">
-        <h3>Fall Schedule</h2>
-            <p id="parrafo_game">
-                * All games take place on saturday.
-            </p>
+        <h3>Fall Schedule</h3>
+           <caption>*All games take place on Saturday</caption>
             <table class="tabla">
                 <tr>
                     <th>SEPTEMBER</th>
