--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
             <img src="./assets/img/hockey1.jpg" alt="player">
         </figure>
             <section id="texto">
-                <article>
+                <article id="texto-home">
                     <h3>August 4</h3>
                     <p>MDSL Funrdaiser</p>
                 </article>
-                <article>
+                <article id="texto-home">
                     <h3>August 16</h3>
                     <p>Seasson Kick-off: Meet the Teams</p>
                 </article>
-                <article>
+                <article id="texto-home">
                     <h3>September 1</h3>
                     <p>First Game of the seasson (Check Game Schedule for details</p>
                 </article>
