--- a/rules.html
+++ b/rules.html
@@ -25,8 +25,8 @@
         </nav>
     </header>
     <section id="texto_rules">
-        <h3 id="titulo">Mighty Ducks Hockey League</h3>
-        <h3 id="titulo">RULES OF PLAY & POLICIES</h3>
+
+
         <h3 id="titulo">SPORTSMANSHIP</h3>
         <p>The common interest that members of the Association share is to inspire
             youth to practice the ideals of sportsmanship and fair play. Any player, coach,
@@ -53,9 +53,8 @@
                     field may be required to play all their games away</p>
             </li>
             <li>
-                <h4>3. FIELDS USED BY YOUNG AGE GROUPS</h4>
-                <p>
                 <ol type="a">
+                    <h4>FIELDS USED BY YOUNG AGE GROUPS</h4>
                     <li>
                         U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
                         for older age groups should be progressively larger
@@ -71,7 +70,6 @@
                         dimensions and size of goal similarly modified.
                     </li>
                 </ol>
-                </p>
             </li>
 
         </ol>
@@ -80,7 +78,7 @@
             All-play means that every recreation player on every team shall play atleast
             fifty percent of each game. Coaches in the competition program are encouraged
             to play their players 50% of each game.
-        </p>
+
         <ul>
             <li>
                 A Coach shall be permitted to not play a player 50% of each game
