--- a/game_info.html
+++ b/game_info.html
@@ -36,49 +36,45 @@
                     <th>Times</th>
                 </tr>
                 <tr>
-                    <td>9/01</td>
+                    <td rowspan="2">9/01</td>
                     <td>U1 and U4</td>
                     <td>AJ Katzeinmaier</td>
                     <td>9:30 am.</td>
                 </tr>
                 <tr>
-                    <td> </td>
                     <td>U3 and U2</td>
                     <td>Greenbay</td>
                     <td>1:00 pm.</td>
                 </tr>
                 <tr>
-                    <td>9/08</td>
+                    <td rowspan="2">9/08</td>
                     <td>U5 and U6</td>
                     <td>Howard A Yeager</td>
                     <td>9:30 pm.</td>
                 </tr>
                 <tr>
-                    <td></td>
                     <td>U6 and U1</td>
                     <td>Marjorie P Hart</td>
                     <td>1:00 pm.</td>
                 </tr>
                 <tr>
-                    <td>9/15</td>
+                    <td rowspan="2">9/15</td>
                     <td>U2 and U4</td>
                     <td>North</td>
                     <td>9:30 pm.</td>
                 </tr>
                 <tr>
-                    <td></td>
                     <td>U3 and U5</td>
                     <td>AJ Katzeinmaier</td>
                     <td>1:00 pm.</td>
                 </tr>
                 <tr>
-                    <td>9/22</td>
+                    <td rowspan="2">9/22</td>
                     <td>U1 and U3</td>
                     <td>South</td>
                     <td>9:30 am.</td>
                 </tr>
                 <tr>
-                    <td></td>
                     <td>U2 and U6</td>
                     <td>Howard A Yeager</td>
                     <td>1:00 pm.</td>
