--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                <img src="./assets/img/hockey3.jpg" alt="Player">
             </figure>
             <section id="texto">
-        <p> Please email us at <a href="mailto:mdhl@chihockey.org? subject=subject text">mdhl@chihockey.org</a>
+        <p>Please email us at<a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
                 We reply to your email as soon as we can.</p>
             </section>
         </main>
