--- a/game_info.html
+++ b/game_info.html
@@ -22,6 +22,7 @@
             <a id="contact" href="./contact.html">Contact</a>
             <a id="rules" href="./rules.html">Rules</a>
             <a id="game" href="#">Game Info</a>
+            <a href="./registration.html">Registration</a>
         </nav>
 
     </header>
