--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
             <a id="contact" href="#">Contact</a>
             <a id="game" href="./game_info.html">Game Info</a>
             <a id="rules" href="./rules.html">Rules</a>
+            <a href="./registration.html">Registration</a>
         </nav>
     </header>
         <main>
