--- a/rules.html
+++ b/rules.html
@@ -22,6 +22,7 @@
             <a id="contact" href="./contact.html">Contact</a>
             <a id="rules" href="#">Rules</a>
             <a id="game" href="./game_info.html">Game info</a>
+            <a href="./registration.html">Registration</a>
         </nav>
     </header>
     <section id="texto_rules">
