corrigiendo errores de validador

--- a/game_info.html
+++ b/game_info.html
@@ -128,15 +128,15 @@
                         referrerpolicy="no-referrer-when-downgrade"></iframe></td>
             </tr>
         </table>
-        <article id="titulo_parrafo">
+        <article class="titulo_parrafo">
             <h4>Facility Type</h4>
             <p>: Outdoor</p>
         </article>
-        <article id="titulo_parrafo">
+        <article class="titulo_parrafo">
             <h4>Aditional Information</h4>
             <p>: If deemed necessary by MDHL James may be shortened or canceled due to extreme weather conditions. </p>
         </article>
-        <article id="titulo_parrafo">
+        <article class="titulo_parrafo">
             <h4>Please direct all questions to</h4>
             <p>: Michael Randall, League Coordinator</p>
         </article>
