--- a/AboutMDHL.html
+++ b/AboutMDHL.html
@@ -26,10 +26,10 @@
         </nav>     
 
     </header>
-    <main>
-        <figure id="foto">
+    <main class="about-main">
+        <figure >
             
-            <img src="./assets/img/hockey2.jpg" alt="player">
+            <img src="./assets/img/hockey2.jpg" alt="player" id="foto">
         </figure>
         <section  id="texto">
         <article>
