cambiando position por flexbox

--- a/rules.html
+++ b/rules.html
@@ -12,22 +12,22 @@
 
 <body>
     <header>
+        <div class="titulo-logo">
+            <img class="logo" src="./assets/img/Logo_Mighty_ducks-01.png" alt="Logo del Club">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
         <figure></figure>
-        <img class="logo" src="./assets/img/Logo_Mighty_ducks-01.png" alt="Logo del Club">
-        <h1>Mighty Ducks Hockey League</h1>
-        <h2>Rules of Play & Policy</h2>
         <nav>
             <a id="home" href="./index.html">Home</a>
-            <a id="about" href="./AboutMDHL.html">About MDHL</a>
+            <a id="about" href="./aboutMDHL.html">About MDHL</a>
             <a id="contact" href="./contact.html">Contact</a>
             <a id="rules" href="#">Rules</a>
             <a id="game" href="./game_info.html">Game info</a>
             <a href="./registration.html">Registration</a>
         </nav>
+        <h2>Rules & Policy</h2>
     </header>
     <section id="texto_rules">
-
-
         <h3 id="titulo">SPORTSMANSHIP</h3>
         <p>The common interest that members of the Association share is to inspire
             youth to practice the ideals of sportsmanship and fair play. Any player, coach,
