--- a/AboutMDHL.html
+++ b/AboutMDHL.html
@@ -34,7 +34,7 @@
         <figure >            
             <img src="./assets/img/hockey2.jpg" alt="player" class="foto">
         </figure>
-        <section  class="texto">
+        <div  class="texto">
         <article>
             <h3>Mission</h3>
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in 
@@ -54,7 +54,7 @@
                 neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of 
                 parents and previous league members</p>
         </article>
-    </section>
+    </div>
     </main>
 
     
