--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,10 @@
             <figure>               
                <img src="./assets/img/hockey3.jpg" alt="Player" class="foto">
             </figure>
-            <section class="texto">
+            <div class="texto">
         <p>Please email us at<a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
                 We reply to your email as soon as we can.</p>
-            </section>
+        </div>
         </main>
     
     
