--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <h2>Uncomming Events</h2>
     </header>
     <main>
-        <section class="foto-texto">
+        <div class="foto-texto">
             <figure>
           
             <img src="./assets/img/hockey1.jpg" alt="player" class="foto">
         </figure>
-            <section class="texto">
+            <div class="texto">
                 <article>
                     <h3>August 4</h3>
                     <p>MDSL Funrdaiser</p>
@@ -49,8 +49,8 @@
                     <h3>September 1</h3>
                     <p>First Game of the seasson (Check Game Schedule for details</p>
                 </article>
-            </section>
-        </section>
+            </div>
+        </div>
     </main>
 
 </body>
