--- a/rules.html
+++ b/rules.html
@@ -28,13 +28,13 @@
         <h2>Rules & Policy</h2>
     </header>
     <section id="texto_rules">
-        <h3 id="titulo">SPORTSMANSHIP</h3>
+        <h3 class="titulo">SPORTSMANSHIP</h3>
         <p>The common interest that members of the Association share is to inspire
             youth to practice the ideals of sportsmanship and fair play. Any player, coach,
             team, parent, spectator, administrator or referee whose behavior detracts from
             this purpose is subject to disciplinary action regardless of technical hockey
             background, expertise, accomplishments or standing.</p>
-        <h3 id="titulo">IHF FIELD REGULATIONS</h3>
+        <h3 class="titulo">IHF FIELD REGULATIONS</h3>
         <ol>
             <li>
                 <h4>DIMENSIONS.</h4>
@@ -74,7 +74,7 @@
             </li>
 
         </ol>
-        <h3 id="titulo">ALL-PLAY</h3>
+        <h3 class="titulo">ALL-PLAY</h3>
         <p>
             All-play means that every recreation player on every team shall play atleast
             fifty percent of each game. Coaches in the competition program are encouraged
